# PO_GRN_REPORT_APP

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  MEMORY_OPTIMIZATION.md  PO_report_fetcher.py  PO_report_processor.py  PO_report_processor_optimized.py  QUICKSTART.md  README.md  SETUP_COMPLETE.md  app.py  cleanup.py  fly.toml  pyproject.toml
.streamlit/: config.toml
