[project]
name = "po-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "streamlit>=1.40.2",
    "xlrd>=2.0.2",
    "xlsxwriter>=3.2.5",
    "zeep>=4.3.2",
]
